@@ -1,7 +1,7 @@
 #  File src/library/base/R/octhex.R
 #  Part of the R package, https://www.R-project.org
 #
-#  Copyright (C) 1995-2014 The R Core Team
+#  Copyright (C) 1995-2021 The R Core Team
 #
 #  This program is free software; you can redistribute it and/or modify
 #  it under the terms of the GNU General Public License as published by
@@ -35,7 +35,18 @@ format.octmode <- function(x, width = NULL, ...)
     ans
 }
 
-as.character.octmode <- function(x, ...) format.octmode(x, ...)
+as.character.octmode <- function(x, ...) {
+    ans <- rep_len(NA_character_, length(x))
+    notNA <- !is.na(x)
+    ans[notNA] <- sprintf("%o", as.integer(x[notNA]))
+    ## keep dim{names}(), names() if there were:
+    dim(ans) <- dim(x)
+    dimnames(ans) <- dimnames(x)
+    names(ans) <- names(x)
+    ans
+}
+
+
 
 print.octmode <- function(x, ...)
 {
@@ -85,7 +96,16 @@ format.hexmode <- function(x, width = NULL, upper.case = FALSE, ...)
     ans
 }
 
-as.character.hexmode <- function(x, ...) format.hexmode(x, ...)
+as.character.hexmode <- function(x, ...) {
+    ans <- rep_len(NA_character_, length(x))
+    notNA <- !is.na(x)
+    ans[notNA] <- sprintf("%x", as.integer(x[notNA]))
+    dim(ans) <- dim(x)
+    dimnames(ans) <- dimnames(x)
+    names(ans) <- names(x)
+    ans
+}
+
 
 print.hexmode <- function(x, ...)
 {
